--- a/components/profile-card/index.html
+++ b/components/profile-card/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="assets/card.css">
 </head>
 <body>
+<div class="container">
 	<div class="card">
 		<div class="card-header">
 			<h1>Joseph M. Matembu</h1>
@@ -27,5 +28,7 @@
 			<a href="#" class="button">Back to Full Profile</a>
 		</div>
 	</div>
+</div>
+	
 </body>
 </html>
