--- a/components/buttons/button.css
+++ b/components/buttons/button.css
@@ -44,6 +44,7 @@ button.button {
 .button:hover, .button:focus {
 	box-shadow: 2px 2px 2px -2px #666666;
 	background-color: rgba(255,255,255,0.8);
+	color: rgba(0,0,0,0.8);
 }
 .button:active {
 	box-shadow: inset 2px 2px 1px #D3D3D3, inset -2px -2px 1px #D3D3D3;
