--- a/components/buttons/index.html
+++ b/components/buttons/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Web Components - Button</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="button.css">
 </head>
 <body>
