--- a/components/forms/login.html
+++ b/components/forms/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>User Login</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
@@ -9,7 +10,7 @@
 		<div class="login">
 			<div class="login-header">
 				<h1>Login</h1>
-				<span><a href="#">Create an Account</a></span>
+				<span><a href="signup.html">Create an Account</a></span>
 			</div>
 			<form class="login-form">
 				<label for="email">Email: *</label>
