Added header with link to main site on all pages

--- a/components/calculator/index.html
+++ b/components/calculator/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="calculator.css">
 </head>
 <body>
+	<header><a href="../../index.html"><h1>Back to Projects</h1></a></header>
 	<div class="calculator">
 		<div class="calculatorOutput">
 			<input type="text" autofocus>
