--- a/components/forms/signup.html
+++ b/components/forms/signup.html
@@ -6,12 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
-	<!-- The user’s first name
-The user’s last name
-The user’s email address
-The user’s date of birth
-The user’s password
-A submit button -->
+	<header><a href="../../index.html"><h1>Back to Projects</h1></a></header>
 	<div class="container">
 		<div class="signup">
 			<div class="signup-header">
