--- a/components/buttons/index.html
+++ b/components/buttons/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="button.css">
 </head>
 <body>
+	<header><a href="../../index.html"><h1>Back to Projects</h1></a></header>
 	<h3>A Basic Button</h3>
 	<div class="button">Buy Now</div>
 
