--- a/components/forms/search.html
+++ b/components/forms/search.html
@@ -6,10 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
 <body>
+	<header><a href="../../index.html"><h1>Back to Projects</h1></a></header>
 	<div class="container">
-		<header>
-			
-		</header>
 		<div class="search">
 			<form class="search-form">
 				<input type="search" name="s" id="s" autofocus placeholder="What do you want to find?"><select>
