--- a/components/profile-card/index.html
+++ b/components/profile-card/index.html
@@ -6,29 +6,30 @@
 	<link rel="stylesheet" href="assets/card.css">
 </head>
 <body>
-<div class="container">
-	<div class="card">
-		<div class="card-header">
-			<h1>Joseph M. Matembu</h1>
-			<img src="assets/me.jpg">
-		</div>
-		<div class="card-body">
-			<h2>About the Developer</h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
-			<div class="divider"></div>
-		</div>
-		<div class="card-footer">
-			<a href="#" class="button">Back to Full Profile</a>
+	<header><a href="../../index.html"><h1>Back to Projects</h1></a></header>
+	<div class="container">
+
+		<div class="card">
+			<div class="card-header">
+				<h1>Joseph M. Matembu</h1>
+				<img src="assets/me.jpg">
+			</div>
+			<div class="card-body">
+				<h2>About the Developer</h2>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<div class="divider"></div>
+			</div>
+			<div class="card-footer">
+				<a href="#" class="button">Back to Full Profile</a>
+			</div>
 		</div>
 	</div>
-</div>
-	
 </body>
 </html>
