--- a/components/forms/questionnaire.html
+++ b/components/forms/questionnaire.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>User Login</title>
+	<title>Questionnaire</title>
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="form.css">
 </head>
