Update billing form

--- a/components/forms/billing.html
+++ b/components/forms/billing.html
@@ -10,7 +10,8 @@
 	<div class="billing-container">
 		<div class="billing">
 			<div class="billing-header">
-
+				<h2>Checkout</h2>
+				<span>Already have an account? <a href="login.html">Sign In</a></span>
 			</div>
 			<form class="billing-form">
 				<fieldset>
